# flexric-ocudu-kpm-v05

./: CMakeLists.txt  OCUDU_KPM_V05.md
docker/ocudu-kpm-v05/: Dockerfile
examples/xApp/c/control/: CMakeLists.txt  ocudu_ccc_prb_control.c  ocudu_prb_control_common.c  ocudu_prb_control_common.h  ocudu_rc_du_prb_control.c  ocudu_rc_du_prb_control.cpp
src/lib/e2ap/v3_01/dec/: e2ap_msg_dec_asn.c
src/ric/: msg_handler_ric.c  near_ric.c
src/ric/iApp/: e42_iapp.c  msg_handler_iapp.c  msg_handler_iapp.h
src/sm/: CMakeLists.txt
src/sm/ccc_sm/: CMakeLists.txt  ccc_sm_agent.c  ccc_sm_agent.h  ccc_sm_id.h  ccc_sm_ric.c  ccc_sm_ric.h
src/sm/kpm_sm/: CMakeLists.txt
src/sm/kpm_sm/kpm_sm_v05.00/: CMakeLists.txt  kpm_sm_agent.c  kpm_sm_agent.h  kpm_sm_id.h  kpm_sm_ric.c
src/sm/kpm_sm/kpm_sm_v05.00/dec/: kpm_dec_asn.c  kpm_dec_generic.h  kpm_dec_plain.c
src/sm/kpm_sm/kpm_sm_v05.00/dec/dec_asn/: CMakeLists.txt  dec_ric_action_def_frm_1.c  dec_ric_action_def_frm_3.c  dec_ric_ind_hdr_frm_1.c
src/sm/kpm_sm/kpm_sm_v05.00/dec/dec_asn_kpm_common/: CMakeLists.txt  dec_bin_range_def.c  dec_label_info.c  dec_matching_cond_frm_3.c  dec_meas_bin_range_info.c  dec_meas_data.c  dec_meas_info_cond_ue.c  dec_meas_info_frm_1.c  dec_test_info.c
src/sm/kpm_sm/kpm_sm_v05.00/enc/: CMakeLists.txt  kpm_enc_asn.c  kpm_enc_generic.h  kpm_enc_plain.c  kpm_enc_plain.h
src/sm/kpm_sm/kpm_sm_v05.00/enc/enc_asn/: CMakeLists.txt  enc_ric_action_def_frm_1.c  enc_ric_action_def_frm_2.c  enc_ric_action_def_frm_3.c  enc_ric_action_def_frm_4.c  enc_ric_ind_msg_frm_1.c  enc_ric_ind_msg_frm_2.c
src/sm/kpm_sm/kpm_sm_v05.00/enc/enc_asn_kpm_common/: CMakeLists.txt  enc_bin_range_def.c  enc_label_info.c  enc_matching_cond_frm_3.c  enc_meas_bin_range_info.c  enc_meas_data.c  enc_meas_info_cond_ue.c  enc_meas_info_frm_1.c  enc_meas_info_frm_3.c  enc_test_info.c
src/sm/kpm_sm/kpm_sm_v05.00/ie/: README.md  e2sm_kpm_v03.00_standard.asn1  kpm_data_ie.c  kpm_data_ie.h
src/sm/kpm_sm/kpm_sm_v05.00/ie/asn/: AMF-UE-NGAP-ID.c  AMFPointer.c  AMFRegionID.c  AMFSetID.c  BinIndex.c  BinRangeDefinition.c  BinRangeDefinition.h  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeList.h  BinRangeValue.c  BinRangeValue.h  CGI.c  CGI.h  CMakeLists.txt  CoreCPID.c  CoreCPID.h  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.c  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.c  E-UTRA-PCI.c  E-UTRA-TAC.c  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format2.h  E2SM-KPM-ActionDefinition-Format3.c  E2SM-KPM-ActionDefinition-Format3.h  E2SM-KPM-ActionDefinition-Format4.c  E2SM-KPM-ActionDefinition-Format4.h  E2SM-KPM-ActionDefinition-Format5.c  E2SM-KPM-ActionDefinition-Format5.h  E2SM-KPM-ActionDefinition.c  E2SM-KPM-ActionDefinition.h  E2SM-KPM-EventTriggerDefinition-Format1.c  E2SM-KPM-EventTriggerDefinition-Format1.h  E2SM-KPM-EventTriggerDefinition.c  (+237 more)
src/sm/kpm_sm/kpm_sm_v05.00/ie/asn_old/: AMF-UE-NGAP-ID.c  AMFPointer.c  AMFRegionID.c  AMFSetID.c  BOOLEAN.c  BinIndex.c  BinRangeDefinition.c  BinRangeDefinition.h  BinRangeItem.c  BinRangeItem.h  BinRangeList.c  BinRangeList.h  BinRangeValue.c  BinRangeValue.h  CGI.c  CGI.h  CMakeLists.txt  CoreCPID.c  CoreCPID.h  DistMeasurementBinRangeItem.c  DistMeasurementBinRangeItem.h  DistMeasurementBinRangeList.c  DistMeasurementBinRangeList.h  E-UTRA-ARFCN.c  E-UTRA-PCI.c  E-UTRA-TAC.c  E2SM-KPM-ActionDefinition-Format1.c  E2SM-KPM-ActionDefinition-Format1.h  E2SM-KPM-ActionDefinition-Format2.c  E2SM-KPM-ActionDefinition-Format2.h  E2SM-KPM-ActionDefinition-Format3.c  E2SM-KPM-ActionDefinition-Format3.h  E2SM-KPM-ActionDefinition-Format4.c  E2SM-KPM-ActionDefinition-Format4.h  E2SM-KPM-ActionDefinition-Format5.c  E2SM-KPM-ActionDefinition-Format5.h  E2SM-KPM-ActionDefinition.c  E2SM-KPM-ActionDefinition.h  E2SM-KPM-EventTriggerDefinition-Format1.c  E2SM-KPM-EventTriggerDefinition-Format1.h  (+231 more)
src/sm/kpm_sm/kpm_sm_v05.00/ie/kpm_data_ie/data/: CMakeLists.txt  bin_range_def.c  bin_range_def.h  label_info_lst.c  label_info_lst.h  matching_cond_frm_3_lst.c  matching_cond_frm_3_lst.h  meas_bin_range_info_lst.h  meas_data_lst.c  meas_data_lst.h  meas_info_cond_ue_lst.c  meas_info_frm_1_lst.c  meas_info_frm_1_lst.h  meas_info_frm_3_lst.c  meas_type.c  meas_type.h  test_info_lst.c  test_info_lst.h  ue_id_gran_period_lst.c
src/sm/kpm_sm/kpm_sm_v05.00/ie/kpm_data_ie/kpm_ric_info/: CMakeLists.txt  kpm_ran_function_def.c  kpm_ric_action_def.c  kpm_ric_action_def.h  kpm_ric_action_def_frm_1.c  kpm_ric_action_def_frm_1.h  kpm_ric_action_def_frm_2.c  kpm_ric_event_trigger_def.c  kpm_ric_ind_hdr.c  kpm_ric_ind_hdr_frm_1.c  kpm_ric_ind_msg.c  kpm_ric_ind_msg_frm_1.c  kpm_ric_ind_msg_frm_2.c
src/xApp/: CMakeLists.txt  e42_xapp.c  e42_xapp.h  e42_xapp_api.c  e42_xapp_api.h  msg_handler_xapp.c  sync_ui.c  sync_ui.h
src/xApp/swig/: CMakeLists.txt
tools/: ocudu_kpm_v05_decode.cpp  prepare_ocudu_kpm_v05_context.sh
